Agregue toda la internacionalizacion del landing page enlazado, ademas realize el modeulo en donde el cliente puede generar un pdf de los eventos que fueron realizados y el administrador los eventos que fueron realizados a todos los usuarios,ademas realize el modulo de servicio al cliente en la parte del administrador

--- a/digital_events_repository/web/SI/administrador/ventas/indexVentas.xhtml
+++ b/digital_events_repository/web/SI/administrador/ventas/indexVentas.xhtml
@@ -20,13 +20,13 @@
                                 <div class="card-icon">
                                     <i class="fas fa-calendar-alt"></i>
                                 </div>
-                                <p class="card-category">Eventos Finalizados</p>
+                                <p class="card-category">#{administrador_ventas.lbl_eventos_finalizados}</p>
                                 <h4 class="card-title">49<small>/50</small></h4>
                             </div>
                             <div class="card-footer">
                                 <div class="stats">
                                     <i class="material-icons text-danger">warning</i>
-                                    <a href="#">Ir a eventos...</a>
+                                    <a href="#">#{administrador_ventas.lbl_ir_eventos}</a>
                                 </div>
                             </div>
                         </div>
@@ -37,13 +37,13 @@
                                 <div class="card-icon">
                                     <i class="material-icons">account_balance</i>
                                 </div>
-                                <p class="card-category">Total Acumulado Hoy</p>
+                                <p class="card-category">#{administrador_ventas.lbl_acumulado_hoy}</p>
                                 <h4 class="card-title">$200.000</h4>
                             </div>
                             <div class="card-footer">
                                 <div class="stats">
                                     <i class="material-icons">date_range</i>
-                                    Ultimas 24h
+                                    #{administrador_ventas.lbl_ultimasveinticuatro_horas}
                                 </div>
                             </div>
                         </div>
@@ -54,7 +54,7 @@
                                 <div class="card-icon">
                                     <i class="material-icons">person_add</i>
                                 </div>
-                                <p class="card-category">Usuarios Nuevos</p>
+                                <p class="card-category">#{administrador_ventas.lbl_usuarios_nuevos}</p>
                                 <h4 class="card-title">+300</h4>
                             </div>
                             <div class="card-footer">
@@ -73,16 +73,16 @@
                                 <div class="ct-chart" id="myChartAdministrador"></div>
                             </div>
                             <div class="card-body">
-                                <h4 class="card-title">Ventas Diarias</h4>
+                                <h4 class="card-title">#{administrador_ventas.lbl_ventas_diarias}</h4>
                                 <p class="card-category">
                                     <span class="text-success">
                                         <i class="material-icons">trending_up</i> 55% 
-                                    </span> increase in today sales.
+                                    </span> #{administrador_ventas.lbl_today_sales}
                                 </p>
                             </div>
                             <div class="card-footer">
                                 <div class="stats">
-                                    <i class="material-icons">access_time</i> Actualizado Ahora
+                                    <i class="material-icons">access_time</i> #{administrador_ventas.lbl_actualizado_hoy}
                                 </div>
                             </div>
                         </div>
