--- a/digital_events_repository/web/landingPage/conozcanos.xhtml
+++ b/digital_events_repository/web/landingPage/conozcanos.xhtml
@@ -20,8 +20,8 @@
                 <br></br>
                 <div class="row">
                     <div class="col-md-6">
-                        <h1 class="title">¿Qué Hacemos?</h1>
-                        <h4>Ofrecemos una alternativa, innovadora y eficaz para la celebración de cada fecha especial, llevando a cada uno de nuestros eventos excelencia y compromiso, sobrepasando siempre las expectativas de nuestros clientes.</h4>
+                        <h1 class="title">#{conocenos.lbl_que_hacemos}</h1>
+                        <h4>#{conocenos.lbl_ofrecemos_una_aternativa}</h4>
                         <br></br>
                     </div>
                 </div>                
@@ -34,43 +34,39 @@
                 <div class="section text-center bg-blue-sky">
                     <div class="row">
                         <div class="col-sm-12 text-center">                           
-                            <h3 class="card-title text-white">¿Quienes Somos?</h3>                          
+                            <h3 class="card-title text-white">#{conocenos.lbl_quienes_somos}</h3>                          
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-md-6 ml-auto mr-auto text-center text-white">
-                            <h3 class="card-title text-white">Nuetsra Misión</h3>
+                            <h3 class="card-title text-white">#{conocenos.lbl_nuestra_mision}</h3>
                             <p class="card-description text-white  text-left">
-                                Ser una organización social competitiva, flexible y dinámica dedicada a la provisión de los mejores servicios recreativos, 
-                                empresariales e infantiles a nivel nacional e internacional, para el bienestar de los niños y la comunidad en general, 
-                                distinguiéndonos como la mejor alternativa de diversión en la sociedad, contando con la mejor calidad del talento humano.
+                                #{conocenos.lbl_ser_una_organizacion}
                             </p>
                         </div>
                         <div class="col-md-6 ml-auto mr-auto text-center">                            
-                            <h3 class="card-title text-white"> Nuestra Visión</h3>
+                            <h3 class="card-title text-white">#{conocenos.lbl_nuestra_vision} </h3>
                             <p class="card-description text-white text-left">
-                                Ser una organización social competitiva, flexible y dinámica dedicada a la provisión de los mejores servicios recreativos, 
-                                empresariales e infantiles a nivel nacional e internacional, para el bienestar de los niños y la comunidad en general, 
-                                distinguiéndonos como la mejor alternativa de diversión y accesiblidida en la sociedad, contando con la mejor calidad del talento humano.
+                                #{conocenos.lbl_ser_una_organizacion}
                             </p>
                         </div>
                     </div>
                     <div class="row">
                         <div class="col-md-12 ml-auto mr-auto text-white">
-                            <h3 class="card-title text-center text-white">Preguntas Frecuentes</h3>  
-                            <h4 class="card-description text-white text-left justify">¿CUÁL SERÍA EL COSTO, PRECIO O PRESUPUESTO PARA UNA FIESTA INFANTIL? </h4>
+                            <h3 class="card-title text-center text-white">#{conocenos.lbl_preguntas_frecuentes}</h3>  
+                            <h4 class="card-description text-white text-left justify">#{conocenos.lbl_cual_seria_el_costo} </h4>
                             <p class="card-category text-white text-left justify">
-                                Después de haber cotizado todos los pasos anteriores puedes fijar un presupuesto real sobre toda la fiesta infantil.<br/>
-                                Enfocarse en donde se dan los costos más elevados que suele ser el menú.<br/>
-                                Por esta razón te sugerimos hacer un buen cálculo y confirmar invitados para evitar desperdicios.<br/>
-                                Debes tener en cuenta que los niños no consumen grandes cantidades de comida en cortos periodos de tiempo.<br/>
-                                Se debe ser bien ajustado al presupuesto inicial e iniciar con buena antelación la planeación y preparación de la fiesta infantil y de esta manera hacerla inolvidable para el cumpleañero y para sus invitados.
+                                #{conocenos.lbl_despues_de_haber}<br/>
+                                #{conocenos.lbl_enfocarse}<br/>
+                                #{conocenos.lbl_por_esta_razon}<br/>
+                                #{conocenos.lbl_debes_tener_en_cuenta}<br/>
+                                #{conocenos.lbl_se_debe_ser_bien}
                             </p>
-                            <h4 class="card-description text-white text-right justify">¿CÓMO SON LAS SORPRESAS PARA NIÑ@S EN UNA FIESTA INFANTIL?</h4>
+                            <h4 class="card-description text-white text-right justify"> #{conocenos.lbl_como_son_las_sorpresas}</h4>
                             <p class="card-category text-white text-right justify">
-                                Se suelen dar premios o regalos para los juegos y competencias, motivando a los niñ@s a realizar las diversas actividades organizadas por los recreadores.<br/>
-                                Los premios se deben tenerse listos antes de comenzar la actividad, para que sean entregados en el momento justo.<br/>
-                                También debes tener sorpresas para todos los niños, que las guardaran como un lindo recuerdo del evento o celebración.
+                                #{conocenos.lbl_se_suelen}<br/>
+                                #{conocenos.lbl_los_premios}<br/>
+                                #{conocenos.lbl_tambien_debes}
                             </p>
                         </div>
                     </div>
