--- a/digital_events_repository/web/landingPage/footer.xhtml
+++ b/digital_events_repository/web/landingPage/footer.xhtml
@@ -12,22 +12,22 @@
                 <ul>
                     <li>
                         <a href="#{request.contextPath}/index.xhtml">
-                            Inicio
+                            #{footer_landign.lbl_inicio}
                         </a>
                     </li>
                     <li>
                         <a href="https://www.eventoslaroca.com/">
-                            Eventos La Roca
+                            #{footer_landign.lbl_eventos_la_roca}
                         </a>
                     </li>
                     <li>
                         <a href="#{request.contextPath}/landingPage/conozcanos.xhtml">
-                            Conózcanos
+                            #{footer_landign.lbl_conocenos}
                         </a>
                     </li>
                     <li>
                         <a href="#{request.contextPath}/landingPage/contactenos.xhtml">
-                            Contactenos
+                            #{footer_landign.lbl_contactenos}
                         </a>
                     </li>
                 </ul>
