--- a/digital_events_repository/web/landingPage/servicios.xhtml
+++ b/digital_events_repository/web/landingPage/servicios.xhtml
@@ -20,8 +20,8 @@
                 <br></br>
                 <div class="row">
                     <div class="col-md-6">
-                        <h1 class="title">Tenemos los mejores shows y personajes para cada ocasión.</h1>
-                        <h4>Diseñados especialmente para eventos empresariales de integración y final de año, día del niño, fiestas temáticas infantiles, atracciones mecánicas, show´s musicales, mundoIinflable, eventos navideños entre otros.</h4>
+                        <h1 class="title">#{servicios_landign.lbl_tenemos_personajes}</h1>
+                        <h4>#{servicios_landign.lbl_diseñados}</h4>
                         <br></br>
                     </div>
                 </div>                
@@ -155,7 +155,7 @@
                         </div>
                     </div>
                     <div class="section text-center">                        
-                        <h2 class="card-title text-white">Show's Musicales - Decoraciones</h2>
+                        <h2 class="card-title text-white"></h2>
                         <div class="team">
                             <div class="row">                                
                                 <div class="col-md-6">
@@ -166,10 +166,10 @@
                                             </div>
                                             <h4 class="card-title text-white">COCO
                                                 <br/>
-                                                <small class="card-description text-dark">Personaje | Show Musical</small>
+                                                <small class="card-description text-dark">#{servicios_landign.lbl_shows_musicales}</small>
                                             </h4>
                                             <div class="card-body">
-                                                <p class="card-description text-white">¿Quieres tener a COCO LA PELICULA en la Fiesta de tus hijos y no sabes cómo encontrarlos?. Con Eventos la Roca tendrás la mejor Fiesta Infantil.</p>
+                                                <p class="card-description text-white">#{servicios_landign.lbl_lbl_quieres_a_coco}</p>
                                             </div>
                                         </div>
                                     </div>
@@ -182,10 +182,10 @@
                                             </div>
                                             <h4 class="card-title text-white">TRANSFORMERS
                                                 <br/>
-                                                <small class="card-description text-dark">Personaje | Show Musical</small>
+                                                <small class="card-description text-dark">#{servicios_landign.lbl_personaje_shows}</small>
                                             </h4>
                                             <div class="card-body">
-                                                <p class="card-description text-white">Optimus prime y bumbublee  te sorprenderán con sus espectaculares movimientos y  con un maravilloso show donde interpretaran canciones de la película  y acompañándolos a  realizar  un show bailable tipo zumba.</p>
+                                                <p class="card-description text-white">#{servicios_landign.lbl_optimus}</p>
                                             </div>
                                         </div>
                                     </div>
@@ -198,12 +198,12 @@
                                             <div class="col-md-6 ml-auto mr-auto">
                                                 <img src="#{request.contextPath}/resources/img/dinosaurios1.png" alt="Thumbnail Image" class="img-raised img-fluid rounded"/>
                                             </div>
-                                            <h4 class="card-title text-white">DINOSAURIOS
+                                            <h4 class="card-title text-white">#{servicios_landign.lbl_dinosarios}
                                                 <br/>
-                                                <small class="card-description text-dark">Personaje | Show Musical</small>
+                                                <small class="card-description text-dark">#{servicios_landign.lbl_personaje_shows}</small>
                                             </h4>
                                             <div class="card-body">
-                                                <p class="card-description text-white">Ven y disfruta con nosotros este espectacular show, comparte con nosotros una aventura dino-vikinga donde podrás observar al gran dinosaurio mecánico en acción, dejándonos impactados con sus fuertes rugidos y movimientos</p>
+                                                <p class="card-description text-white">#{servicios_landign.lbl_ven_y_disfruta}</p>
                                             </div>
                                         </div>
                                     </div>
@@ -214,12 +214,12 @@
                                             <div class="col-md-6 ml-auto mr-auto">
                                                 <img src="#{request.contextPath}/resources/img/era-de-hielo.png" alt="Thumbnail Image" class="img-raised img-fluid rounded"/>
                                             </div>
-                                            <h4 class="card-title text-white">ERA DE HIELO
+                                            <h4 class="card-title text-white">#{servicios_landign.lbl_era_hielo}
                                                 <br/>
-                                                <small class="card-description text-dark">Personaje | Show Musical</small>
+                                                <small class="card-description text-dark">#{servicios_landign.lbl_personaje_shows}</small>
                                             </h4>
                                             <div class="card-body">
-                                                <p class="card-description text-white">No Te Pierdas Esta Magnífica Oportunidad De Compartir Junto A Nuestros Personajes De La Era De Hielo Donde Manny, Diego Y Sid  Nos Estarán Acompañando y Sorprendiendo Con Un Espectacular Show Musical Llenándolos De Baile,  Risa Y Mucha Diversión.</p>
+                                                <p class="card-description text-white">#{servicios_landign.lbl_no_te_pierdas}</p>
                                             </div>
                                         </div>
                                     </div>
@@ -234,10 +234,10 @@
                                             </div>
                                             <h4 class="card-title text-white">MICKEY Y MINNIE MOUSE
                                                 <br/>
-                                                <small class="card-description text-dark">Personajes | Show Musical</small>
+                                                <small class="card-description text-dark">#{servicios_landign.lbl_personaje_shows}</small>
                                             </h4>
                                             <div class="card-body">
-                                                <p class="card-description text-white">Mickey y Minnie realizará una puesta en escena con música y ambientación de la serie de televisión.</p>
+                                                <p class="card-description text-white">#{servicios_landign.lbl_mickey_minie}</p>
                                             </div>
                                         </div>
                                     </div>
@@ -250,10 +250,10 @@
                                             </div>
                                             <h4 class="card-title text-white">FROZEN
                                                 <br/>
-                                                <small class="card-description text-dark">Personaje | Show Musical</small>
+                                                <small class="card-description text-dark">#{servicios_landign.lbl_personaje_shows}</small>
                                             </h4>
                                             <div class="card-body">
-                                                <p class="card-description text-white">Elsa y Olaf (Personajes de Frozen) realizará una puesta en escena con música y ambientación de la película.</p>
+                                                <p class="card-description text-white">#{servicios_landign.lbl_elsa_olaf}</p>
                                             </div>
                                         </div>
                                     </div>
@@ -268,10 +268,10 @@
                                             </div>
                                             <h4 class="card-title text-white">PAW PATROL
                                                 <br/>
-                                                <small class="card-description text-dark">Personajes | Show Musical</small>
+                                                <small class="card-description text-dark">#{servicios_landign.lbl_personaje_shows}</small>
                                             </h4>
                                             <div class="card-body">
-                                                <p class="card-description text-white">Contrata con nosotros el Show Musical. Se realizará una puesta en escena con música y ambientación de la película.</p>
+                                                <p class="card-description text-white">#{servicios_landign.lbl_contrata_con_nosotros}</p>
                                             </div>
                                         </div>
                                     </div>
@@ -284,10 +284,10 @@
                                             </div>
                                             <h4 class="card-title text-white"> TEAM MINIONS
                                                 <br/>
-                                                <small class="card-description text-dark">Personaje | Show Musical</small>
+                                                <small class="card-description text-dark">#{servicios_landign.lbl_personaje_shows}</small>
                                             </h4>
                                             <div class="card-body">
-                                                <p class="card-description text-white">Contrata con nosotros el Show Musical. El team Minions realizará una puesta en escena con música y ambientación de la serie de televisión.</p>
+                                                <p class="card-description text-white">#{servicios_landign.lbl_contrata_team}</p>
                                             </div>
                                         </div>
                                     </div>
@@ -302,10 +302,10 @@
                                             </div>
                                             <h4 class="card-title text-white">MONSTERS INC.
                                                 <br/>
-                                                <small class="card-description text-dark">Personajes | Show Musical</small>
+                                                <small class="card-description text-dark">#{servicios_landign.lbl_personaje_shows}</small>
                                             </h4>
                                             <div class="card-body">
-                                                <p class="card-description text-white">Contrata con nosotros el Show Musical. Se realizará una puesta en escena con música y ambientación de la película.</p>
+                                                <p class="card-description text-white">#{servicios_landign.lbl_contrata_moster}</p>
                                             </div>
                                         </div>
                                     </div>
@@ -318,10 +318,10 @@
                                             </div>
                                             <h4 class="card-title text-white"> IRON MAN Y LOS AVENGERS
                                                 <br/>
-                                                <small class="card-description text-dark">Personajes | Show Musical</small>
+                                                <small class="card-description text-dark">#{servicios_landign.lbl_personaje_shows}</small>
                                             </h4>
                                             <div class="card-body">
-                                                <p class="card-description text-white">Tony Stark en su traje de Iron Man realizará una puesta en escena con música y ambientación de la serie de televisión.</p>
+                                                <p class="card-description text-white">#{servicios_landign.lbl_iron_man}</p>
                                             </div>
                                         </div>
                                     </div>
@@ -329,22 +329,22 @@
                             </div>
                             <div class="row">
                                 <div class="col-sm-12 text-left">                           
-                                    <h3 class="card-title text-white">Algunas características de los Show´s Musicales:</h3>
+                                    <h3 class="card-title text-white">#{servicios_landign.lbl_algunas_caracteristicas}</h3>
                                     <p class="card-text text-white">
-                                        Nuestros Personajes realizará una puesta en escena con música y ambientación, luego de este #ShowMusical (fono-mímica) interpretando las canciones de las películas y series, nuestros #Recreadores realizan un baile interactivo con todos los invitados.
-                                        Este Show puede estar acompañado de efectos especiales como: cámara de humo, lluvia de nieve, explosión de confetis y otros efectos, ¡pregunta por ellos!.<br/>
-                                        1. <strong>Recreación Dirigida:</strong> Juegos con niños e invitados, para una integración y diversión.<br/>
-                                        2. <strong>Escenografía:</strong> Montaje y ambientación del personaje para el Show Musical y toda la fiesta.<br/>
-                                        3. <strong>Títeres Temáticos:</strong> Garantizamos un Show con títeres gigantes temáticos, acompañado de un teatrino inflable.<br/>
-                                        4. <strong>Bienvenida en Pintucaritas:</strong> Maquillaje facial con figuras bordeadas en negro, acabados en color e iluminado con escarcha. Nuevo: Pregunta por nuestras pintucaritas neón.<br/>
-                                        5. <strong>Sorpresas y diversión:</strong> Show de títeres, show clown de payasos, globoflexia, efectos especiales y muho más.<br/>
+                                        #{servicios_landign.lbl_nuestros_personajes_realizaran}
+                                         #{servicios_landign.lbl_este_show}<br/>
+                                        1. <strong>#{servicios_landign.lbl_recreacion_dirigida}</strong> #{servicios_landign.lbl_juegos_con_ninos}<br/>
+                                        2. <strong>#{servicios_landign.lbl_ecenografria}</strong> #{servicios_landign.lbl_montaje_y_ambientacion}<br/>
+                                        3. <strong>#{servicios_landign.lbl_titeres_tematicos}</strong> #{servicios_landign.lbl_garantizamos}<br/>
+                                        4. <strong>#{servicios_landign.lbl_bienvenida_pintucaritas}</strong>#{servicios_landign.lbl_maquillaje_facial} <br/>
+                                        5. <strong>#{servicios_landign.lbl_sopresasydiversion}</strong>#{servicios_landign.lbl_shows_talleres}<br/>
                                    </p>                            
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div class="section text-center">                        
-                        <h2 class="card-title text-white">Mundo Inflables</h2>
+                        <h2 class="card-title text-white">#{servicios_landign.lbl_mundo_infables}</h2>
                         <div class="team">
                             <div class="row">                                
                                 <div class="col-md-4">
@@ -406,16 +406,16 @@
                             </div>
                             <div class="row">
                                 <div class="col-sm-12 text-left">                           
-                                    <h3 class="card-title text-white">Algunas características de nuestros inflables:</h3>
+                                    <h3 class="card-title text-white">#{servicios_landign.lbl_algunas_caracteristicas_adicionales}</h3>
                                     <p class="card-text text-white">
-                                    Nuestros Inflables son ideales para eventos de integración corporativa y fiestas infantiles, con alta calidad y seguridad en los equipos.<br/>
-                                    Cada una de los inflables de Eventos la Roca cuenta con un <strong>operador responsable y capacitado.</strong><br/>
-                                    1. <strong>Recreación Dirigida.</strong><br/>
-                                    2. <strong>Diseño de Equipos.</strong><br/>
-                                    3. <strong>Logistica y Montaje.</strong><br/>
-                                    4. <strong>Transporte propio para el traslado de los inflables.</strong><br/>
-                                    5. <strong>Personal capacitado y comprometido.</strong><br/>
-                                    5. <strong>Seguridad.</strong><br/>
+                                    #{servicios_landign.lbl_nuestros_inflable}<br/>
+                                     #{servicios_landign.lbl_cada_una}<strong>#{servicios_landign.lbl_operador_responsable}</strong><br/>
+                                    1. <strong>#{servicios_landign.lbl_recreacion_dirigida}</strong><br/>
+                                    2. <strong>#{servicios_landign.lbl_disenio_de_equipos}</strong><br/>
+                                    3. <strong>#{servicios_landign.lbl_logistica_y_montajes}</strong><br/>
+                                    4. <strong>#{servicios_landign.lbl_transporte_propio}</strong><br/>
+                                    5. <strong>#{servicios_landign.lbl_personal_capacitado_y}</strong><br/>
+                                    5. <strong>#{servicios_landign.lbl_seguridad}</strong><br/>
                                     </p>                            
                                 </div>
                             </div>
