--- a/digital_events_repository/web/SI/administrador/usuarios/index.xhtml
+++ b/digital_events_repository/web/SI/administrador/usuarios/index.xhtml
@@ -136,7 +136,7 @@
                                                 <i class="fas fa-file-pdf"></i>
                                             </h:commandLink>&nbsp;&nbsp;
                                             <h:commandLink class="card-category btn btn-primary btn-flat m-b-30 m-t-30" action="#" 
-                                                           a:data-toggle="modal" a:data-target="#modalCSV" value="Carga CSV">
+                                                           a:data-toggle="modal" a:data-target="#modalCSV" value="#{administrador_inventario.lbl_cargar_csv}">
                                                 <f:ajax render=":modalCSVContent"/>
                                                 <i class="fas fa-upload"></i>
                                             </h:commandLink>&nbsp;&nbsp;
@@ -384,11 +384,11 @@
                         <div class="modal-body">
                             <h:form>
                                 <div class="modal-body">
-                                    <label class="control-label mb-1">#{administrador_usuarios.lbl_nombre_usuario}</label>
+                                    <label class="control-label mb-1">#{administrador_perfil.lbl_nombre}</label>
                                     <div class="form-group">#{usuarioController.usuarioSeleccionado.nombres}</div>
                                     <label class="control-label mb-1">#{administrador_usuarios.lbl_apellido}</label>
                                     <div class="form-group">#{usuarioController.usuarioSeleccionado.apellidos}</div>
-                                    <label class="control-label mb-1">#{administrador_usuarios.lbl_tipo_documento}</label>
+                                    <label class="control-label mb-1">#{administrador_perfil.lbl_tipoDocumento}</label>
                                     <div class="form-group">#{usuarioController.usuarioSeleccionado.tiposDocumento.nombre}</div>
                                     <label class="control-label mb-1">#{administrador_usuarios.lbl_documento}</label>
                                     <div class="form-group">#{usuarioController.usuarioSeleccionado.documento}</div>
@@ -398,7 +398,7 @@
                                             <f:convertDateTime pattern="yyyy-MM-dd" />
                                         </h:outputText> 
                                     </div>
-                                    <label class="control-label mb-1">#{administrador_usuarios.lbl_correo}</label>
+                                    <label class="control-label mb-1">#{administrador_perfil.lbl_correoElectronico}</label>
                                     <div class="form-group">#{usuarioController.usuarioSeleccionado.correo}</div>
                                     <label class="control-label mb-1">#{administrador_usuarios.lbl_genero}</label>
                                     <div class="form-group">#{usuarioController.usuarioSeleccionado.genero}</div>
@@ -452,21 +452,21 @@
                     <h:panelGroup id="modalCSVContent" class="modal-content" layout="block">
                         <div class="modal-content">
                             <div class="modal-header">
-                                <h5 class="modal-title titulom" id="exampleModalLabel">#{administrador_usuarios.lbl_cargar}</h5>
+                                <h5 class="modal-title titulom" id="exampleModalLabel">#{administrador_inventario.lbl_carga_archivos}</h5>
                                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                                     <span aria-hidden="true">&times;</span>
                                 </button>
                             </div>
                             <div class="modal-body">
                                 <div class="form-group">
-                                    <label for="fileS" class="subir">#{administrador_usuarios.lbl_cargar} <i  style="font-size: 15px" class="fas fa-upload"></i></label>
+                                    <label for="fileS" class="subir">#{administrador_inventario.lbl_cargar_csv} <i  style="font-size: 15px" class="fas fa-upload"></i></label>
                                     <h:inputFile id="fileS"  value="#{cargaUsuariosCSVController.multipart}"> </h:inputFile>
                                     <div id="info"></div>
                                 </div>                               
                             </div>
                             <div class="modal-footer">
                                 <button type="button" class="btn btn-danger letra-boton" data-dismiss="modal">#{administrador_usuarios.lbl_cerrar}</button>
-                                <h:commandLink style="font-size: 12px" class="btn btn-primary letra-boton" value="Cargar" action="#{cargaUsuariosCSVController.fileUploadCsv()}">
+                                <h:commandLink style="font-size: 12px" class="btn btn-primary letra-boton" value="#{administrador_inventario.lbl_cargar_csv}" action="#{cargaUsuariosCSVController.fileUploadCsv()}">
                                     <f:ajax render="mesagescsv" execute="fileS"/>
                                     <i class="fas fa-save"></i>
                                 </h:commandLink>
