--- a/digital_events_repository/web/landingPage/contactenos.xhtml
+++ b/digital_events_repository/web/landingPage/contactenos.xhtml
@@ -19,7 +19,7 @@
                     <div class="section text-center">
                         <div class="row">
                             <div class="col-md-12 ml-auto mr-auto">                         
-                                <h2 class="card-title text-white">CONTÁCTANOS</h2>
+                                <h2 class="card-title text-white">#{contactenos.lbl_contactenos}</h2>
                             </div>
                         </div>
                         <br/>
@@ -32,38 +32,48 @@
                                 </iframe>
                             </div>
                             <div class="col-md-6 ml-auto mr-auto">
-                                <h3 class="card-title text-white">Envianos Tus Peticiones</h3>
+                                <h3 class="card-title text-white">#{contactenos.lbl_envianos_tus_peticones}</h3>
                                 <h4 class="card-category text-white text-left">
-                                    ¡Gracias por contactarnos!. Estaremos encantados de responder a cualquier pregunta sobre recreacion, fiesta tematica infantil, show musical y evento empresarial.<br/>
-                                    <strong>Dirección:</strong> Transversal 82 A Bis # 83 B – 46<br/>
+                                    #{contactenos.lbl_gracias_por}<br/>
+                                    <strong>#{contactenos.lbl_direccion}</strong> Transversal 82 A Bis # 83 B – 46<br/>
                                     Barrio La Española, Bogotá D.C. – Colombia<br/>
-                                    <strong>Teléfono:</strong> +57 (1) 436 3030<br/>
-                                    <strong>Fax:</strong> +57 (1) 276 7016<br/>
-                                    <strong>Móvil:</strong> +57 315 353 3950
+                                    <strong>#{contactenos.lbl_telefono}</strong> +57 (1) 436 3030<br/>
+                                    <strong>#{contactenos.lbl_fax}</strong> +57 (1) 276 7016<br/>
+                                    <strong>#{contactenos.lbl_movil}</strong> +57 315 353 3950
                                 </h4>
+                                <div class="row">
+                                    <a type="button" href="http://www.facebook.com" class="btn btn-lg social facebook" style="margin-top: 4px; display: flex; border-radius: 20px; width: 60px;
+                                       height: 60px; padding: 0px;"><i href="facebook.com" class="fab fa-facebook-f" style="background: transparent; color:white; display:block; font-size: 30px; margin: auto;"></i></a>
+
+                                    <a type="button" href="http://www.twitter.com" class="btn btn-lg social  facebook" style="margin-top: 4px; display: flex; border-radius: 20px; width: 60px; background-color:#1dcaff;
+                                       height: 60px; padding: 0px;"><i class="fab fa-twitter-square" style="background: transparent; color:white; display:block; font-size: 30px; margin: auto; "></i><span></span></a>
+
+                                    <a type="button" href="http://www.youtobe.com" class="btn btn-lg social  facebook" style="margin-top: 4px; display: flex; border-radius: 20px; width: 60px; background-color: #ff0000;
+                                       height: 60px; padding: 0px;"><i class="fab fa-youtube" style="background: transparent; color:white; display:block; font-size: 30px; margin: auto; margin-left: 12px;"></i></a>
+                                </div>
                                 <h:form class="contact-form">
                                     <div class="row">
                                         <div class="col-md-6">
                                             <div class="form-group">
-                                                <label class="bmd-label-floating text-white">Your Name</label>
+                                                <label class="bmd-label-floating text-white">#{contactenos.lbl_su_nombre}</label>
                                                 <input type="email" class="form-control"/>
                                             </div>
                                         </div>
                                         <div class="col-md-6">
                                             <div class="form-group">
-                                                <label class="bmd-label-floating text-white">Your Email</label>
+                                                <label class="bmd-label-floating text-white">#{contactenos.lbl_su_email}</label>
                                                 <input type="email" class="form-control"/>
                                             </div>
                                         </div>
                                     </div>
                                     <div class="form-group">
-                                        <label for="exampleMessage" class="bmd-label-floating text-white">Your Message</label>
+                                        <label for="exampleMessage" class="bmd-label-floating text-white">#{contactenos.lbl_su_mensaje}</label>
                                         <textarea type="email" class="form-control" rows="4" id="exampleMessage"></textarea>
                                     </div>
                                     <div class="row">
                                         <div class="col-md-4 ml-auto mr-auto text-center">
                                             <button class="btn btn-primary btn-raised">
-                                                Send Message
+                                                #{contactenos.lbk_enviar_mensaje}
                                             </button>
                                         </div>
                                     </div>
