--- a/digital_events_repository/web/landingPage/main.xhtml
+++ b/digital_events_repository/web/landingPage/main.xhtml
@@ -18,8 +18,8 @@
                 <br></br>
                 <div class="row">
                     <div class="col-md-6">
-                        <h1 class="title">Tu Historia Comienza Con Nosotros.</h1>
-                        <h4>Eventos La Roca y Digital Events han aportado nuestra experiencia en eventos y logística, lo que nos permite ayudar a nuestros clientes en la organización de cada una de sus fechas especiales, llevando diversión, entretenimiento e innovación a niños, jóvenes y adultos.</h4>
+                        <h1 class="title">#{main_landign.lbl_tu_historia_comienza}</h1>
+                        <h4>#{main_landign.lbl_digital_events_y_la_roca}</h4>
                         <br></br>
                     </div>
                 </div>
@@ -30,13 +30,9 @@
                 <div class="section text-center">
                     <div class="row">
                         <div class="col-md-8 ml-auto mr-auto">
-                            <h2 class="card-title text-light">FIESTAS INFANTILES Y RECREACIONISTAS EN BOGOTÁ</h2>
-                            <h5 class="description text-light">Desde 1994, La Roca ha aportado Experiencia y Alegría en cada una de las Fiestas y Eventos en que nos han invitado a participar. 
-                                Tenemos toda la Logística para hacer Inolvidables sus fechas espaciales. 
-                                Organizamos y Planificamos fiestas Todo Incluido para niños, Jóvenes y Adultos. 
-                                Contamos con los Mejores: Recreacionistas, Personajes, Inflables Infantiles, Payasos, Show´s Musicales, Magos, entre otros. 
-                                También realizamos: Eventos Empresariales, Fiestas Temáticas Infantiles, Chiquitecas, Animación de Fiestas, Decoración, Alimentación, entre otros. 
-                                Permítenos Organizar la Fiesta soñada para Tu Máxima Diversión.
+                            <h2 class="card-title text-light">#{main_landign.lbl_fiestas_infantiles_y_recreacionsitas}</h2>
+                            <h5 class="description text-light">#{main_landign.lbl_historia} 
+                                #{main_landign.lbl_tenemos_toda_la_logistica} 
                             </h5>
                         </div>
                     </div>
@@ -47,8 +43,8 @@
                                     <div class="icon icon-info">
                                         <i class="material-icons">event_available</i>
                                     </div>
-                                    <h4 class="info-title text-white">Reserva de Eventos</h4>
-                                    <p class="description text-white">Evita esa molestia de llamar y esperar a que te atiendan. Aquí podras reservar tu evento fácil, rápido y hacerlo de una manera divertida. ¡Pruebalo!</p>
+                                    <h4 class="info-title text-white">#{main_landign.lbl_reserva_de_eventos}</h4>
+                                    <p class="description text-white">#{main_landign.lbl_evita_molestia}</p>
                                 </div>
                             </div>
                             <div class="col-md-4">
@@ -56,8 +52,8 @@
                                     <div class="icon icon-success">
                                         <i class="material-icons">security</i>
                                     </div>
-                                    <h4 class="info-title text-white">Seguridad De Datos</h4>
-                                    <p class="description text-light">En Digital Events nos aseguramos de que tu infomarcion este protegida. Te damos la satisfaccion de ser 100% seguros en nuestros procesos para nuestros clientes.</p>
+                                    <h4 class="info-title text-white">#{main_landign.lbl_seguridad_de_datos}</h4>
+                                    <p class="description text-light">#{main_landign.lbl_en_digital_events}</p>
                                 </div>
                             </div>
                             <div class="col-md-4">
@@ -65,25 +61,25 @@
                                     <div class="icon icon-danger">
                                         <i class="material-icons">verified_user</i>
                                     </div>
-                                    <h4 class="info-title text-white">Calidad</h4>
-                                    <p class="description text-white">En nuestro sistema garantizamos un alto de nivel de calidad en los servicios adquiridos por los clientes, cumpliendo con todos los requisitos..</p>
+                                    <h4 class="info-title text-white">#{main_landign.lbl_calidad}</h4>
+                                    <p class="description text-white">#{main_landign.lbl_en_nuestro_sistama}</p>
                                 </div>
                             </div>
                         </div>
                     </div>
                     <div class="section text-center">
-                        <h2 class="card-title text-white">Aquí estan nuestros roles</h2>
+                        <h2 class="card-title text-white">#{main_landign.lbl_aqui_estan_nuestros_roles}</h2>
                         <div class="team">
                             <div class="row">
                                 <div class="col-md-4">
                                     <div class="team-player">
                                         <div class="card card-plain">
-                                            <h4 class="card-title text-white">Administrador
+                                            <h4 class="card-title text-white">#{main_landign.lbl_rol_admin}
                                                 <br></br>
-                                                <small class="card-description text-muted">Rol</small>
+                                                <small class="card-description text-muted">#{main_landign.lbl_rol}</small>
                                             </h4>
                                             <div class="card-body">
-                                                <p class="card-description text-white">El administrador es quien verifica, aprueba y dirije los eventos solicitados por clientes. Así como controlar el registro de los usuarios, las nuevas solicitudes y los materiales.</p>
+                                                <p class="card-description text-white">#{main_landign.lbl_el_administrador}</p>
                                             </div>
                                         </div>
                                     </div>
@@ -91,12 +87,12 @@
                                 <div class="col-md-4">
                                     <div class="team-player">
                                         <div class="card card-plain">
-                                            <h4 class="card-title text-white">Recreador
+                                            <h4 class="card-title text-white">#{main_landign.lbl_ro_recreador}
                                                 <br></br>
-                                                <small class="card-description text-muted">Rol</small>
+                                                <small class="card-description text-muted">#{main_landign.lbl_rol}</small>
                                             </h4>
                                             <div class="card-body">
-                                                <p class="card-description text-white">El administrador es quien verifica, aprueba y dirije los eventos solicitados por clientes. Así como controlar el registro de los usuarios, las nuevas solicitudes y los materiales.</p>
+                                                <p class="card-description text-white">#{main_landign.lbl_el_recreador}</p>
                                             </div>
                                         </div>
                                     </div>
@@ -104,12 +100,12 @@
                                 <div class="col-md-4">
                                     <div class="team-player">
                                         <div class="card card-plain">
-                                            <h4 class="card-title text-white">Cliente
+                                            <h4 class="card-title text-white">#{main_landign.lbl_rol_cliente}
                                                 <br></br>
-                                                <small class="card-description text-muted">Rol</small>
+                                                <small class="card-description text-muted">#{main_landign.lbl_rol}</small>
                                             </h4>
                                             <div class="card-body">
-                                                <p class="card-description text-white">El administrador es quien verifica, aprueba y dirije los eventos solicitados por clientes. Así como controlar el registro de los usuarios, las nuevas solicitudes y los materiales.</p>
+                                                <p class="card-description text-white">#{main_landign.lbl_el_cliente}</p>
                                             </div>
                                         </div>
                                     </div>
