Agregue toda la internacionalizacion del landing page enlazado, ademas realize el modeulo en donde el cliente puede generar un pdf de los eventos que fueron realizados y el administrador los eventos que fueron realizados a todos los usuarios,ademas realize el modulo de servicio al cliente en la parte del administrador ahora si verificado todo

--- a/digital_events_repository/web/index.xhtml
+++ b/digital_events_repository/web/index.xhtml
@@ -5,7 +5,7 @@
       xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
       xmlns:f="http://xmlns.jcp.org/jsf/core"
       xmlns:a="http://java.sun.com/jsf/passthrough">
-
+    <f:view locale="#{lenguajeController.locale}">
     <h:head>
         <ui:include src="/WEB-INF/includes/template/head.xhtml"/>        
     </h:head>
@@ -19,5 +19,8 @@
         <ui:insert name="modals-page"></ui:insert>
         <ui:include src="/WEB-INF/includes/template/scripts.xhtml"/>
     </h:body>
+    </f:view>
+    
+    
 </html>
 
