--- a/digital_events_repository/web/landingPage/header.xhtml
+++ b/digital_events_repository/web/landingPage/header.xhtml
@@ -74,10 +74,10 @@
                         <div class="dropdown-menu dropdown-with-icons" aria-labelledby="ingreso">
                             <h:form>
                                 <h:commandLink class="dropdown-item">
-                                    <i class="material-icons">person_add</i> #{footer_landign.lbl_registrarse}
+                                    <i class="material-icons">person_add</i> #{login.lbl_registrar}
                                 </h:commandLink>
                                 <a  href="#{request.contextPath}/login.xhtml" class="dropdown-item">
-                                    <i class="material-icons">power_settings_new</i> #{footer_landign.lbl_iniciar_session}
+                                    <i class="material-icons">power_settings_new</i> #{login.lbl_iniciar_session}
                                 </a>
                             </h:form>
                         </div>
